Fixed the overflow bug on the table.

--- a/app/styles/components/_modules/_ember-table.scss
+++ b/app/styles/components/_modules/_ember-table.scss
@@ -6,7 +6,7 @@
 **/
 
 .ember__table__wrap {
-  overflow: hidden;
+  position: relative;
 }
 
 .ember-table-tables-container {
